# dalio-machine

./: .env.example  .gitignore  CLAUDE.md  README.md  project_context.md  pyproject.toml
scripts/: audit_freshness.py  find_jp_cpi.py  find_replacements.py  search_fred.py  test_bis.py
src/dalio/: countries.py
src/dalio/app/: streamlit_app.py  views.py
src/dalio/data_sources/: bis.py  fred.py
src/dalio/pipelines/: fetch_bis.py  fetch_fred.py
src/dalio/scoring/: allocation.py  asset_signals.py  big_cycle.py  calibration.py  currency.py  grid.py  long_term.py  replay.py  short_term.py  thresholds.py
src/dalio/storage/: db.py
tests/: test_allocation.py  test_asset_signals.py  test_big_cycle.py  test_bis.py  test_calibration.py  test_countries.py  test_db.py  test_fred.py  test_grid.py  test_long_term_classifier.py  test_replay.py  test_short_term_classifier.py  test_views.py
